--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
           <img src="images/arrows.svg" alt="arrows" class="arrows">
           <p class="tag-line">IMPERIAL CONVERTER</p>
         </div>
-        <input type="text" name="yourInputName" id="yourInputId" placeholder="Enter text here">
+        <input type="text" name="yourInputName" class="yourInputId" placeholder="50">
         <button class="convert-button">Convert</button>    
      </section>
      
   <!-- Conversion Output Section -->   
      <section class="conversion-section">
         <div class="conversion-item">
+           <!-- Header Row --> 
           <div class="conversion-header-row">
             <span class="tag-line-container">
                 <img src="images/ellipse.svg" alt="ellipse" class="ellipse">
@@ -41,6 +42,22 @@
             <span class="tag-line-container">
                 <p class="tag-line">KILLOGRAMS / POUNDS</p>
             </span>
+          </div>
+          <!-- Conversion Row --> 
+          <div class="conversion-row-container">
+            <div class="conversion-row-item">
+              <p class="conversion-row-value">50</p>
+              <p class="conversion-row-badge">KILOS</p>
+            </div>
+            <div class="chevron-container">
+              <svg class="chevron" xmlns="http://www.w3.org/2000/svg" width="10" height="16" viewBox="0 0 10 16" fill="none">
+                <path d="M1.8335 14.3334L8.16683 8.00002L1.8335 1.66669" stroke="#2B2B2B" stroke-width="2.11111" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <div class="conversion-row-item">
+              <p class="conversion-row-value">50</p>
+              <p class="conversion-row-badge">KILOS</p>
+            </div>
           </div>
         </div>
      </section>
