--- a/index.html
+++ b/index.html
@@ -43,21 +43,42 @@
                 <p class="tag-line">KILLOGRAMS / POUNDS</p>
             </span>
           </div>
-          <!-- Conversion Row --> 
-          <div class="conversion-row-container">
-            <div class="conversion-row-item">
-              <p class="conversion-row-value">50</p>
-              <p class="conversion-row-badge">KILOS</p>
+
+          <div class="conversion-container">
+          <!-- Conversion Row 1 --> 
+            <div class="conversion-row-container">
+              <div class="conversion-row-item">
+                <p class="conversion-row-value">50</p>
+                <p class="conversion-row-badge">KILOS</p>
+              </div>
+              <div class="chevron-container">
+                <svg class="chevron" xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 10 16" fill="none">
+                  <path d="M1.8335 14.3334L8.16683 8.00002L1.8335 1.66669" stroke="#2B2B2B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+              <div class="conversion-row-item">
+                <p class="conversion-row-value">44.092</p>
+                <p class="conversion-row-badge">POUNDS</p>
+              </div>
             </div>
-            <div class="chevron-container">
-              <svg class="chevron" xmlns="http://www.w3.org/2000/svg" width="10" height="16" viewBox="0 0 10 16" fill="none">
-                <path d="M1.8335 14.3334L8.16683 8.00002L1.8335 1.66669" stroke="#2B2B2B" stroke-width="2.11111" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
+
+            <!-- Conversion Row 2 --> 
+            <div class="conversion-row-container">
+              <div class="conversion-row-item">
+                <p class="conversion-row-value">50</p>
+                <p class="conversion-row-badge">KILOS</p>
+              </div>
+              <div class="chevron-container">
+                <svg class="chevron" xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 10 16" fill="none">
+                  <path d="M1.8335 14.3334L8.16683 8.00002L1.8335 1.66669" stroke="#2B2B2B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+              <div class="conversion-row-item">
+                <p class="conversion-row-value">44.092</p>
+                <p class="conversion-row-badge">POUNDS</p>
+              </div>
             </div>
-            <div class="conversion-row-item">
-              <p class="conversion-row-value">50</p>
-              <p class="conversion-row-badge">KILOS</p>
-            </div>
+          
           </div>
         </div>
      </section>
