--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- Conversion Row 1 --> 
             <div class="conversion-row-container">
               <div class="conversion-row-item">
-                <p class="conversion-row-value">50</p>
+                <p class="conversion-row-value" id="user-value-input">50</p>
                 <p class="conversion-row-badge" id="badge">KILOS</p>
               </div>
               <div class="chevron-container">
@@ -76,7 +76,7 @@
             <!-- Conversion Row 2 --> 
             <div class="conversion-row-container">
               <div class="conversion-row-item">
-                <p class="conversion-row-value">50</p>
+                <p class="conversion-row-value" id="user-value-input">50</p>
                 <p class="conversion-row-badge" id="badge">POUNDS</p>
               </div>
               <div class="chevron-container">
@@ -114,7 +114,7 @@
             <!-- Conversion Row 1 --> 
             <div class="conversion-row-container">
               <div class="conversion-row-item">
-                <p class="conversion-row-value">50</p>
+                <p class="conversion-row-value" id="user-value-input">50</p>
                 <p class="conversion-row-badge" id="badge">METERS</p>
               </div>
               <div class="chevron-container">
@@ -131,7 +131,7 @@
             <!-- Conversion Row 2 --> 
             <div class="conversion-row-container">
               <div class="conversion-row-item">
-                <p class="conversion-row-value">50</p>
+                <p class="conversion-row-value" id="user-value-input">50</p>
                 <p class="conversion-row-badge" id="badge">FEET</p>
               </div>
               <div class="chevron-container">
@@ -169,7 +169,7 @@
             <!-- Conversion Row 1 --> 
             <div class="conversion-row-container">
               <div class="conversion-row-item">
-                <p class="conversion-row-value">50</p>
+                <p class="conversion-row-value" id="user-value-input">50</p>
                 <p class="conversion-row-badge" id="badge">LITTERS</p>
               </div>
               <div class="chevron-container">
@@ -186,7 +186,7 @@
             <!-- Conversion Row 2 --> 
             <div class="conversion-row-container">
               <div class="conversion-row-item">
-                <p class="conversion-row-value">50</p>
+                <p class="conversion-row-value" id="user-value-input">50</p>
                 <p class="conversion-row-badge" id="badge">GALLONS</p>
               </div>
               <div class="chevron-container">
